# scrapy-web

./: .breakpoints  README.md  pyproject.toml  quotes.json  requirements.in  requirements.txt  scrapy.cfg
my_xxx/: items.py  middlewares.py  pipelines.py  settings.py
my_xxx/spiders/: kubnews.py  quoter.py
