[tool.poetry]
name = "mobileleafyproblem"
version = "0.1.0"
description = "my first project"
authors = ["Ivan Yastrebov <easy-quest@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Scrapy = "^2.5.1"
bpython = "^0.21"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
